--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="root"></div>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31fe1ee21bc1d16dcb5eb09b81091e8f&libraries=services"></script>
 </body>
 
 </html>
